testing out serialization

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,3 +8,4 @@ add_executable(readFile.out readFile.cpp)
 add_executable(bloom.out bloomFilter.cpp fnv.h)
 add_executable(helloTemplate.out helloTemplate.cpp)
 add_executable(helloMultisets.out helloMultisets.cpp)
+add_executable(serialize.out serialize.cpp)
