--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,8 @@ set(CMAKE_CXX_STANDARD 11)
 
 add_executable(learn_cxx.out main.cpp)
 add_executable(readFile.out readFile.cpp)
-add_executable(bloom.out bloomFilter.cpp fnv.h)
+add_executable(bloom.out bloomFilter.cpp fnv.h myVector.cpp)
 add_executable(helloTemplate.out helloTemplate.cpp)
 add_executable(helloMultisets.out helloMultisets.cpp)
 add_executable(serialize.out serialize.cpp)
+add_executable(myVector.out myVector.cpp)
